[gd_scene load_steps=2 format=3 uid="uid://c8q6y8j5x7q5v"]

[ext_resource type="Script" path="res://scripts/stage/debug/StageDebugOverlay.gd" id="1_yjk2p"]

[node name="StageDebugOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_yjk2p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FlowStateLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
text = "Flow: LOW"

[node name="DifficultyLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 76.0
text = "Difficulty: low"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 107.0
max_value = 100.0

[node name="PositionLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 136.0
text = "Position: (0, 0, 0)"

[node name="ConfigInfoLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 140.0
offset_right = 320.0
offset_bottom = 296.0
text = "No stage loaded"

[node name="ErrorLabel" type="Label" parent="."]
visible = false
offset_left = 20.0
offset_top = 300.0
offset_right = 320.0
offset_bottom = 326.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
text = "ERROR: "

[node name="PerformanceMetricsLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 330.0
offset_right = 320.0
offset_bottom = 486.0
text = "Performance Metrics:"
